# pde-solver

./: .gitignore  CMakeLists.txt  README.md  accomplishments_inventory.tex  cover_letter_template.tex  cv_template.tex  resume_template.tex
Accomplishments/: accomplishments_inventory.tex
Job_Specific/ARUP/: Arup_Application_Questions.odt  Resume.tex  cover_letter.tex
Job_Specific/BP_HPC/: Eli_Case_Resume.tex  Resume.tex
Job_Specific/OXY/: Eli_Case_Resume.tex  Resume.tex  cover_letter.tex
Job_Specific/Thornton_Tomasetti/: Eli_Case_Resume.tex
Job_Specific/WSP/: Resume.tex  cover_letter.tex
Job_Type/Aerospace/: Eli_Case_Resume.tex
Job_Type/Cold_Spray/: Eli_Case_Resume.tex
Job_Type/Computational_Scientist/: Eli_Case_Resume.tex  resume.tex
Job_Type/General/: Eli_Case_Resume.tex  Resume.tex
Job_Type/Quant/: Eli_Case_Resume.tex  Resume.tex
include/apps/poisson/: PoissonBilinearForm.hpp  PoissonLinearForm.hpp
include/backend/: backend.hpp
include/config/: Platform.hpp
include/core/: Config.hpp  CudaMacros.hpp  FEM.hpp  IO.hpp  LinAlg.hpp  Linalg.hpp  Mesh.hpp  Parallel.hpp  Topology.hpp  Types.hpp  Utils.hpp
include/equations/heateq/: HeatEquation.hpp
include/equations/heateq/boundary/: BoundaryFluxFunction.hpp  BoundaryValueFunction.hpp
include/equations/heateq/eval/: ConductivityModel.hpp  DefaultModel.hpp  EvalElement.hpp  EvalField.hpp  EvalQuadraturePointBoundary.hpp  EvalQuadraturePointVolume.hpp  SourceFunction.hpp
include/equations/heateq/form/: DiffusionForm.hpp  FluxBoundaryForm.hpp  SourceForm.hpp
include/equations/poisson/: BilinearForm.hpp  DiffusionForm.hpp  EvalContext.hpp  EvalElement.hpp  EvalField.hpp  EvalModel.hpp  EvalQuadraturePoint.hpp  EvalQuadraturePointBoundary.hpp  FluxBoundaryForm.hpp  LinearForm.hpp  PoissonBilinearForm.hpp  PoissonEquation.hpp  PoissonLinearForm.hpp  PoissonSourceTerm.hpp  SourceForm.hpp  SourceFunction.hpp  SourceTerm.hpp
include/equations/poisson/boundary/: BoundaryFluxFunction.hpp  BoundaryValueFunction.hpp
include/equations/poisson/eval/: ConductivityModel.hpp  DefaultModel.hpp  EvalElement.hpp  EvalField.hpp  EvalQuadraturePointBoundary.hpp  EvalQuadraturePointVolume.hpp  SourceFunction.hpp
include/equations/poisson/form/: DiffusionForm.hpp  FluxBoundaryForm.hpp  SourceForm.hpp
include/fem/: BilinearForm.hpp  ElementEval.hpp  GaussQuadrature1D.hpp  GaussQuadratureHex.hpp  GaussQuadratureQuad.hpp  JacobianTransform.hpp  Lagrange1D.hpp  LagrangeHex.hpp  LagrangeQuad.hpp
include/fem/assembly/: Assembler.hpp  LinearAssembler.hpp  NonlinearAssembler.hpp
include/fem/assembly/backend/: Serial.tpp  Types.hpp
include/fem/basis/: Lagrange1D.hpp  Lagrange1D.tpp  LagrangeHex.hpp  LagrangeHex.tpp  LagrangeQuad.hpp  LagrangeQuad.tpp
include/fem/boundary/: BoundaryApplicator.hpp  BoundaryCondition.hpp  BoundaryRegistry  BoundaryRegistry.hpp  EssentialBC.hpp
include/fem/dof/: AlgebraicDOF.hpp  AlgebraicDOF.tpp  DOFHandler.hpp  DOFOrdering.hpp
include/fem/eval/: ElementEval.hpp  EvalContext.hpp  EvalElement.hpp  EvalField.hpp  EvalFunction.hpp  EvalModel.hpp  EvalQuadraturePoint.hpp  EvalQuadraturePointBoundary.hpp  EvalQuadraturePointVolume.hpp  FieldEval.hpp
include/fem/form/: BilinearForm.hpp  LinearForm.hpp  NonlinearForm.hpp  NonlinearResidualForm.hpp  NonlinearTangentForm.hpp
include/fem/geometry/: JacobianTransform.hpp  JacobianTransform.tpp  JacobianTransform2D.tpp  JacobianTransform3D.tpp
include/fem/quadrature/: GaussQuadrature1D.hpp  GaussQuadrature1D.tpp  GaussQuadratureHex.hpp  GaussQuadratureHex.tpp  GaussQuadratureQuad.hpp  GaussQuadratureQuad.tpp
include/io/: FieldIO.hpp  GmshReader.hpp  MeshIO.hpp  VTKWriter.hpp
include/io/utils/: Binary.hpp  Gmsh.hpp
include/linalg/: Operator.hpp  SparseMatrix.hpp  Vector.hpp
include/linalg/operations/: MatrixOps.hpp  VectorOps.hpp
include/linalg/operator/: CSROperator.hpp  FEMOperator.hpp  Operator.hpp
include/linalg/types/: CSRMatrix.hpp  Matrix.hpp  SparseMatrix.hpp  Vector.hpp
include/linalg/types/backend/: CPU.hpp  (+5 more)
include/mesh/: BlockMesh2D.hpp  Data.hpp  Mesh.hpp  MeshBase.hpp  MeshData.hpp
include/mesh/generator/: BlockMesh2D.hpp
include/mesh/partition/: MeshPartitioner.hpp  PartitionData.hpp  PartitionMethod.hpp
include/parallel/: HaloExchange.hpp
include/pde/: grid.hpp
include/pde/boundary/: dirichlet.hpp
include/pde/diffop/: laplacian.hpp
include/pde/mesh/: mesh.hpp
include/pde/ops/: laplacian.hpp  ops.hpp
include/pde/rhs/: rhs.hpp
include/pde/solution/: solution.hpp
include/topology/: TopologicalDOF.hpp  TopologicalDOF.tpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  poisson_serial.cpp
src/backend/: CMakeLists.txt
src/backend/cuda/: CMakeLists.txt
src/backend/mpi/: CMakeLists.txt
src/backend/openmp/: CMakeLists.txt
src/backend/serial/: CMakeLists.txt
src/bc/: CMakeLists.txt
src/core/: CMakeLists.txt
src/equations/: CMakeLists.txt
src/fem/: CMakeLists.txt
src/io/: CMakeLists.txt  FieldIO.cpp  GmshReader.cpp  MeshIO.cpp  VTKWriter.cpp
src/io/utils/: Gmsh.cpp
src/linalg/: CMakeLists.txt
src/mesh/: BlockMesh2D.cpp  CMakeLists.txt
src/mesh/exchange/: MeshConverter.cpp
src/mesh/exchange/gmsh/: IntermediateMesh.cpp  MeshConverter.cpp
src/mesh/generator/: BlockMesh2D.cpp
src/pde/: grid.cpp
src/pde/diffop/: laplacian.cpp
src/pde/mesh/: mesh.cpp
src/pde/ops/: laplacian.cpp
src/pde/rhs/: rhs.cpp
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt  poisson_eq.cpp
tests/integration/: cpu_poisson_assembly_minimal.cpp  cpu_poisson_minimal.cpp  poisson_serial.cpp  serial_poisson_assembly_minimal.cpp
tests/integration/fem/cpu/: HeatEquationMinimal.cpp  poisson_minimal.cpp
tests/integration/full/cpu/: HeatEquationMinimal.cpp  poisson_minimal.cpp
tests/unit/: blockmesh2d.cpp  jacobian.cpp  lagrange.cpp  test_lagrange.cpp
tests/unit/fem/: Jacobian.cpp  jacobian.cpp  lagrange.cpp
tests/unit/io/: FieldIO.cpp  MeshIO.cpp
tests/unit/linalg/cpu/: CG.cpp  MatrixOperations.cpp  VectorOperations.cpp  cg.cpp
tests/unit/mesh/: BlockMesh2D.cpp  blockmesh2d.cpp
(+19 files in other folders)
